# flet_dev_env

./: conda.yaml  docker-compose.yaml  main.py  pyproject.toml
docker/: Dockerfile
src/: main.py
